--- a/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
+++ b/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
@@ -83,7 +83,7 @@
 <app-profile-header *ngIf="bg_image_ready"
                     [album_id]="album_id"
                     [album_media_id]="album_media_id"                    
-                    [public_profile_info]="public_profile_info" 
+                    [publicProfileInfo]="public_profile_info" 
                     [current_user_bg]="spotbieBackgroundImage"></app-profile-header>
 
 <!--<app-notifications></app-notifications>-->
