--- a/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
+++ b/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
@@ -19,7 +19,7 @@
   </tr>
 </table>
 
-<app-profile-header [public_profile_info]="public_profile_info"
+<app-profile-header [publicProfileInfo]="public_profile_info"
                     [current_user_bg]="spotbieBackgroundImage"
                     [album_id]="album_id"
                     [album_media_id]="album_media_id"
