--- a/src/app/spotbie/spotbie-logged-in/friends/around-me/around-me-actions/around-me-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/around-me/around-me-actions/around-me-actions.component.html
@@ -2,6 +2,20 @@
 
 <div class='spotbie-overlay-window'>
     
+    <div class='spotbie-reportReasons' *ngIf="reportReasonsUp">
+
+        <div class='spotbie-reportReasonsInnerWrapper' [ngStyle]="{ 'background-color' : bgColor}">
+
+            <h4>Why would you like to report {{ around_me_user.username }}?</h4>
+
+            <div class="spotbie-reportReason" *ngFor="let reportReason of reportReasonList" (click)="report(reportReason.id)">
+                {{ reportReason.name }}
+            </div>
+
+        </div>
+
+    </div>
+
     <div class='spotbie-friend-actions-image'
         *ngIf="around_me_user.default_picture as user_default"
         [ngStyle]="{'background' : 'url(' + user_default + ')'}"></div>
@@ -11,7 +25,7 @@
     <table class='spotbie-friend-action-buttons' *ngIf="isDesktop">
         <tr>
             <td>
-                <div class='spotbie-button' [routerLink]="['/user-profile/' + friend.user.username]">View Profile</div>
+                <div class='spotbie-button' [routerLink]="['/user-profile/' + around_me_user.username]">View Profile</div>
             </td>
             <td>
                 <div class='spotbie-button' (click)="unfriend()">Unfriend</div>
@@ -22,7 +36,7 @@
                 <div class='spotbie-button' (click)="blockUser()">Block</div>
             </td>
             <td>
-                <div class='spotbie-button' (click)="report()">Report</div>
+                <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
             </td>            
         </tr>
     </table>
@@ -30,7 +44,7 @@
     <table class='spotbie-friend-action-buttons' *ngIf="isMobile">
         <tr>
             <td>
-                <div class='spotbie-button' [routerLink]="['/user-profile/' + friend.user.username]">View Profile</div>
+                <div class='spotbie-button' [routerLink]="['/user-profile/' + around_me_user.username]">View Profile</div>
             </td>
         </tr>
         <tr>
@@ -45,12 +59,21 @@
         </tr>
         <tr>            
             <td>
-                <div class='spotbie-button' (click)="report()">Report</div>
+                <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
             </td>            
         </tr>
     </table>
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="spotbie-close-button" (click)="closeActionsx()">close</div>
+
+    <div class="spotbie-successful-action-wrapper" *ngIf="successful_action">
+        <div class="spotbie-successful-action-title">
+            {{ successful_action_title }}
+        </div>
+        <div class="spotbie-successful-action-description">
+            {{ successful_action_description }}
+        </div>        
+    </div>
 
 </div>
         
