--- a/src/app/spotbie/spotbie-logged-in/friends/blocked-users/blocked-user-actions/blocked-user-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/blocked-users/blocked-user-actions/blocked-user-actions.component.html
@@ -2,6 +2,20 @@
 
 <div class='spotbie-overlay-window'>
     
+    <div class='spotbie-reportReasons' *ngIf="reportReasonsUp">
+
+        <div class='spotbie-reportReasonsInnerWrapper' [ngStyle]="{ 'background-color' : bgColor}">
+
+            <h4>Why would you like to report {{ blocked_user.user.username }}?</h4>
+
+            <div class="spotbie-reportReason" *ngFor="let reportReason of reportReasonList" (click)="report(reportReason.id)">
+                {{ reportReason.name }}
+            </div>
+
+        </div>
+
+    </div>
+
     <div class='spotbie-friend-actions-image'
         *ngIf="blocked_user.spotbie_user.default_picture as user_default"
         [ngStyle]="{'background' : 'url(' + user_default + ')'}"></div>
@@ -22,7 +36,7 @@
                 <div class='spotbie-button' (click)="friendUser()">Befriend</div>
             </td>
             <td>
-                <div class='spotbie-button' (click)="report()">Report</div>
+                <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
             </td>            
         </tr>
     </table>
@@ -45,7 +59,7 @@
         </tr>
         <tr>            
             <td>
-                <div class='spotbie-button' (click)="report()">Report</div>
+                <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
             </td>            
         </tr>
     </table>    
