--- a/src/app/spotbie/spotbie-logged-in/friends/my-friends/friend-actions/friend-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/my-friends/friend-actions/friend-actions.component.html
@@ -1,10 +1,24 @@
 <div class='spotbie-overlay-window'>
     
+    <div class='spotbie-reportReasons' *ngIf="reportReasonsUp">
+
+        <div class='spotbie-reportReasonsInnerWrapper' [ngStyle]="{ 'background-color' : bgColor}">
+
+            <h4>Why would you like to report {{ friend.user.username }}?</h4>
+
+            <div class="spotbie-reportReason" *ngFor="let reportReason of reportReasonList" (click)="report(reportReason.id)">
+                {{ reportReason.name }}
+            </div>
+
+        </div>
+
+    </div>
+    
     <div class='spotbie-friend-actions-image' 
         *ngIf="friend.spotbie_user.default_picture as user_default"
         [ngStyle]="{'background' : 'url(' + user_default + ')'}"></div>
     
-        <div class='spotbie-friend-actions-username'>{{ friend.user.username }}</div>
+    <div class='spotbie-friend-actions-username'>{{ friend.user.username }}</div>
     
     <table class='spotbie-friend-action-buttons' *ngIf="isDesktop">
         <tr>
@@ -20,7 +34,7 @@
                 <div class='spotbie-button' (click)="blockUser()">Block</div>
             </td>
             <td>
-                <div class='spotbie-button' (click)="report()">Report</div>
+                <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
             </td>            
         </tr>
     </table>
@@ -43,7 +57,7 @@
         </tr>
         <tr>            
             <td>
-                <div class='spotbie-button' (click)="report()">Report</div>
+                <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
             </td>            
         </tr>
     </table>
@@ -57,6 +71,20 @@
         <div class="spotbie-successful-action-description">
             {{ successful_action_description }}
         </div>        
+    </div>
+
+    <div class='spotbie-reportReasons' *ngIf="reportReasonsUp">
+
+        <h4>Why would you like to report {{ around_me_user.username }}?</h4>
+
+        <div class='spotbie-reportReasonsInnerWrapper'>
+
+            <div class="spotbie-reportReason" *ngFor="let reportReason of reportReasonList">
+                {{ reportReason.name }}
+            </div>
+
+        </div>
+
     </div>
 
 </div>
