--- a/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friend-actions/pending-friend-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friend-actions/pending-friend-actions.component.html
@@ -2,6 +2,20 @@
 
 <div class='spotbie-overlay-window'>
     
+    <div class='spotbie-reportReasons' *ngIf="reportReasonsUp">
+
+        <div class='spotbie-reportReasonsInnerWrapper' [ngStyle]="{ 'background-color' : bgColor}">
+
+            <h4>Why would you like to report {{ pending_friend.user.username }}?</h4>
+
+            <div class="spotbie-reportReason" *ngFor="let reportReason of reportReasonList" (click)="report(reportReason.id)">
+                {{ reportReason.name }}
+            </div>
+
+        </div>
+
+    </div>
+
     <div class='spotbie-friend-actions-image'
         *ngIf="pending_friend.spotbie_user.default_picture as user_default"
         [ngStyle]="{'background' : 'url(' + user_default + ')'}"></div>
@@ -23,7 +37,7 @@
                 <div class='spotbie-button' (click)="blockUser()">Block</div>
             </td>
             <td>
-                <div class='spotbie-button' (click)="report()">Report</div>
+                <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
             </td>            
         </tr>
     </table>
