--- a/src/styles.css
+++ b/src/styles.css
@@ -491,7 +491,7 @@ a, a:hover, a:active, a:after{
     left: 15px;
     bottom: 15px;
     transition: 0.5s;
-    background-color: #609329;
+    background-color: #0d0d0d;
     padding: 5px;
     padding-left: 13px;
     padding-right: 13px;
