--- a/src/app/streamer/stream-post/stream-post.component.html
+++ b/src/app/streamer/stream-post/stream-post.component.html
@@ -6,7 +6,7 @@
 
             <div class='spotbie-stream-post-default-picture'
             [routerLink]="['/user-profile/' + stream_post.stream_by.username ]"
-            [ngStyle]="{'background' : 'url(/' + stream_post.spotbie_user.default_picture  + ')' } "></div>
+            [ngStyle]="{'background' : 'url(' + stream_post.spotbie_user.default_picture  + ')' } "></div>
 
             <div class='spotbie-stream-post-by'>
 
