--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -124,3 +124,65 @@
 .spotbie-button{
     background-color: rgba(0,0,0,.5);
 }
+
+@media (max-width: 1583px) { 
+
+}
+@media (max-width: 1300px) { 
+
+}
+@media (max-width: 1200px) {   
+
+}
+@media (max-width: 1169px) {
+
+}
+@media (max-width: 1024px) { 
+
+}
+@media (max-width: 900px) { 
+
+}
+@media (max-width: 840px) {
+
+}
+@media (max-width: 768px) { 
+
+}
+@media (max-width: 700px) { 
+
+}
+@media (max-width: 600px) { 
+  
+}
+@media (max-width: 560px) { 
+    .spotbie-info-object-title {
+        font-size: 18px;
+        max-width: 90%;
+        letter-spacing: 1px;
+    }
+}
+@media (max-width: 460px) { 
+    
+}
+@media (max-width: 420px) { 
+  
+}
+@media (max-width: 375px) { 
+  
+}
+@media (max-width: 360px) { 
+
+}
+@media (max-width: 340px) {
+   
+}
+@media (max-width: 320px) {
+
+}
+@media (max-width: 220px) { 
+
+}
+@media (max-width: 120px) { 
+
+}
