--- a/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friend-actions/pending-friend-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friend-actions/pending-friend-actions.component.html
@@ -20,27 +20,20 @@
         *ngIf="pending_friend.spotbie_user.default_picture as user_default"
         [ngStyle]="{'background' : 'url(' + user_default + ')'}"></div>
 
-        <div class='spotbie-friend-actions-username'>{{ pending_friend.user.username }}</div>
+    <div class='spotbie-friend-actions-username'>{{ pending_friend.user.username }}</div>
 
-    <table class='spotbie-friend-action-buttons'>
-        <tr>
-            <td>
-                <div class='spotbie-button' [routerLink]="['/user-profile/' + pending_friend.user.username]">View Profile</div>
-            </td>
-            <td>
-                <div class='spotbie-button' (click)="cancelRequest()" *ngIf="pending_friend.made_by == my_id">Cancel Request</div>
-                <div class='spotbie-button' (click)="acceptRequest()" *ngIf="pending_friend.made_by != my_id">Accept Request</div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div class='spotbie-button' (click)="blockUser()">Block</div>
-            </td>
-            <td>
-                <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
-            </td>            
-        </tr>
-    </table>
+    <div class='spotbie-friend-action-buttons'>
+
+        <div class='spotbie-button' [routerLink]="['/user-profile/' + pending_friend.user.username]">View Profile</div>
+
+        <div class='spotbie-button' (click)="cancelRequest()" *ngIf="pending_friend.made_by == my_id">Cancel Request</div>
+        <div class='spotbie-button' (click)="acceptRequest()" *ngIf="pending_friend.made_by != my_id">Accept Request</div>
+
+        <div class='spotbie-button' (click)="blockUser()">Block</div>
+
+        <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
+
+    </div>
 
     <div class="spotbie-close-button" (click)="closeWindow()">close</div>
 
