--- a/src/styles.css
+++ b/src/styles.css
@@ -741,7 +741,14 @@ a, a:hover, a:active, a:after{
     }
 }
 @media (max-width: 560px) { 
-
+    .spotbie-close-button{
+        max-width: 50px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 25px;
+        padding-right: 25px;
+        font-size: 16px;        
+    }
 }
 @media (max-width: 460px) { 
     html{
@@ -766,7 +773,7 @@ a, a:hover, a:active, a:after{
         max-width: 100%;
     } 
     .spotbie-scroll-top i {
-        font-size: 30px;
+        font-size: 22px;
     }    
 }
 @media (max-width: 420px) { 
