--- a/src/app/spotbie/spotbie-logged-in/friends/my-friends/my-friends.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/my-friends/my-friends.component.html
@@ -30,4 +30,4 @@
     Load More
 </div>
 
-<app-friend-actions [friend]="current_friend" *ngIf="show_friend_actions"></app-friend-actions>
+<app-friend-actions [peer]="current_friend" *ngIf="show_friend_actions"></app-friend-actions>
