--- a/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friends.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friends.component.html
@@ -20,4 +20,4 @@
     Load More
 </div>
 
-<app-pending-friend-actions *ngIf="show_pending_actions" [pending_friend]="current_pending"></app-pending-friend-actions>
+<app-pending-friend-actions *ngIf="show_pending_actions" [peer]="current_pending"></app-pending-friend-actions>
