--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -82,6 +82,6 @@
         Forgot Password?
   </div>
 
-  <app-forgot-password *ngIf="forgotPasswordWindow.open"></app-forgot-password>
+  <app-forgot-password *ngIf="forgotPasswordWindow.open" (closeWindow)="forgotPasswordWindow.open = false"></app-forgot-password>
 
 </div>
