--- a/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friend-actions/pending-friend-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friend-actions/pending-friend-actions.component.html
@@ -6,7 +6,7 @@
 
         <div class='spotbie-reportReasonsInnerWrapper' [ngStyle]="{ 'background-color' : bgColor}">
 
-            <h4>Why would you like to report {{ pending_friend.user.username }}?</h4>
+            <h4>Why would you like to report {{ peer.user.username }}?</h4>
 
             <div class="spotbie-reportReason" *ngFor="let reportReason of reportReasonList" (click)="report(reportReason.id)">
                 {{ reportReason.name }}
@@ -17,17 +17,17 @@
     </div>
 
     <div class='spotbie-friend-actions-image'
-        *ngIf="pending_friend.spotbie_user.default_picture as user_default"
+        *ngIf="peer.spotbie_user.default_picture as user_default"
         [ngStyle]="{'background' : 'url(' + user_default + ')'}"></div>
 
-    <div class='spotbie-friend-actions-username'>{{ pending_friend.user.username }}</div>
+    <div class='spotbie-friend-actions-username'>{{ peer.user.username }}</div>
 
     <div class='spotbie-friend-action-buttons'>
 
-        <div class='spotbie-button' [routerLink]="['/user-profile/' + pending_friend.user.username]">View Profile</div>
+        <div class='spotbie-button' (click)="viewProfile()">View Profile</div>
 
-        <div class='spotbie-button' (click)="cancelRequest()" *ngIf="pending_friend.made_by == my_id">Cancel Request</div>
-        <div class='spotbie-button' (click)="acceptRequest()" *ngIf="pending_friend.made_by != my_id">Accept Request</div>
+        <div class='spotbie-button' (click)="cancelRequest()" *ngIf="peer.made_by == my_id">Cancel Request</div>
+        <div class='spotbie-button' (click)="acceptRequest()" *ngIf="peer.made_by != my_id">Accept Request</div>
 
         <div class='spotbie-button' (click)="blockUser()">Block</div>
 
