--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
@@ -13,14 +13,14 @@
             spotbie-rel-div
             spotbie-paragraph">
   
-    Forgotten your SpotBie password? Enter your e-mail or phone number below.
-    We will send you a reset pin which you will enter next to reset your password.
+    Forgot your SpotBie password? Enter your e-mail or phone number below.
+    We will send you a reset pin which you will enter to reset your password.
   
   </p>  
 
-  <form [formGroup]="password_reset_form" *ngIf="step_one">
+  <form [formGroup]="passwordResetForm" *ngIf="step_one">
     
-    <div *ngIf="pass_reset_submitted && g.spotbie_email_or_ph.errors else spotbie_reset_1_normal" class="spotbie-invalid-feedback animated shake"> 
+    <div *ngIf="passResetSubmitted && g.spotbie_email_or_ph.errors else spotbie_reset_1_normal" class="spotbie-invalid-feedback animated shake"> 
 
       <div *ngIf="g.spotbie_email_or_ph.errors.maxlength">
           Phone number or e-mail can only be 130 characters in length.
@@ -34,7 +34,7 @@
 
     <ng-template #spotbie_reset_1_normal>
 
-      <div class="spotbie-toast-info spotbie-contact-me-info">
+      <div #getLinkMessage class="spotbie-toast-info spotbie-contact-me-info">
         {{ email_or_ph_error }}
       </div>
 
@@ -45,66 +45,45 @@
           type="text" 
           placeholder="Phone Number or E-Mail"/>
 
-    <button class="spotbie-button spotbie-padding spotbie-margin" (click)="startPassReset()">
-      Get My PIN
+    <button class="spotbie-button spotbie-padding spotbie-margin" (click)="setPassResetPin()">
+      Send Reset Link
     </button>
 
   </form>
   
-  <form [formGroup]="password_reset_form_2" *ngIf="step_two">
-    
-    <div *ngIf="pin_reset_submitted && f.spotbie_reset_pin.errors else spotbie_reset_2_normal" class="spotbie-invalid-feedback animated shake"> 
-
-        <div *ngIf="f.spotbie_reset_pin.errors.maxlength">
-          Incorrect PIN.
-        </div>
-
-        <div *ngIf="f.spotbie_reset_pin.errors.required">
-          Please enter your PIN.
-        </div>
-
-    </div>
-
-    <ng-template #spotbie_reset_2_normal>
+  <div *ngIf="step_two">
+  
+    <div>
 
         <div class="spotbie-toast-info spotbie-contact-me-info">
           {{ pin_ready_msg }}
         </div>
 
-    </ng-template>    
+    </div>    
 
-    <input class="spotbie-input"
-          formControlName="spotbie_reset_pin" 
-          type="text" 
-          placeholder="Reset PIN"/>
+  </div>
 
-    <button class="spotbie-button spotbie-padding spotbie-margin" (click)="sendPin()">
-      Send Reset Pin
-    </button>
-
-  </form>
-
-  <form [formGroup]="password_form" *ngIf="step_three">
+  <form [formGroup]="passwordForm" *ngIf="step_three">
 
     <table class='spotbie-settings-table'>      
 
             <tr>
                 <td>
-                    <div *ngIf="password_submitted && h.spotbie_reset_password.errors else spotbie_password_normal" class="spotbie-invalid-feedback animated shake">
+                    <div *ngIf="password_submitted && h.spotbieResetPassword.errors else spotbie_password_normal" class="spotbie-invalid-feedback animated shake">
           
-                      <div *ngIf="h.spotbie_reset_password.errors.required">
+                      <div *ngIf="h.spotbieResetPassword.errors.required">
                           Enter a new password.
                       </div>       
                 
-                      <div *ngIf="h.spotbie_reset_password.errors.oneNumber">
+                      <div *ngIf="h.spotbieResetPassword.errors.oneNumber">
                         Password must contain at least one number (0-9)!
                       </div> 
 
-                      <div *ngIf="h.spotbie_reset_password.errors.oneLowerCase">
+                      <div *ngIf="h.spotbieResetPassword.errors.oneLowerCase">
                           Password must contain at least one lowercase letter (a-z)!
                       </div>  
 
-                      <div *ngIf="h.spotbie_reset_password.errors.oneUpperCase">
+                      <div *ngIf="h.spotbieResetPassword.errors.oneUpperCase">
                           Password must contain at least one uppercase letter (A-Z)!
                       </div>                       
 
@@ -119,7 +98,7 @@
                     </ng-template>       
 
                     <input class="spotbie-input" (click)="$event.target.select()" 
-                          formControlName="spotbie_reset_password" 
+                          formControlName="spotbieResetPassword" 
                           type="password" 
                           value="password"
                           placeholder="New Password"
@@ -132,13 +111,13 @@
 
                 <td>
 
-                  <div *ngIf="password_submitted && h.spotbie_reset_password_c.errors else spotbie_confirm_password_normal" class="spotbie-invalid-feedback animated shake">          
+                  <div *ngIf="password_submitted && h.spotbieResetPasswordC.errors else spotbie_confirm_password_normal" class="spotbie-invalid-feedback animated shake">          
             
-                    <div *ngIf="h.spotbie_reset_password_c.errors.mustMatch">
+                    <div *ngIf="h.spotbieResetPasswordC.errors.mustMatch">
                       Your passwords must match.
                     </div>
                     
-                    <div *ngIf="h.spotbie_reset_password_c.errors.required">
+                    <div *ngIf="h.spotbieResetPasswordC.errors.required">
                         Please confirm your password.
                     </div>
 
@@ -151,7 +130,7 @@
                   </ng-template>
 
                   <input class="spotbie-input" (click)="$event.target.select()" 
-                          formControlName="spotbie_reset_password_c" 
+                          formControlName="spotbieResetPasswordC" 
                           type="password" 
                           value="newpassword" 
                           placeholder="Confirm New Password"
@@ -183,6 +162,6 @@
   
   </div>
 
-  <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+  <div class="spotbie-close-button" (click)="closeWindowX()">close</div>
 
 </div>
